HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureCaptureUnique/Source/Main.uv
//! Rejected expression specimen for implicit capture of a unique binding.

public procedure closureCaptureUniqueReference() -> bool {
    let value: unique i32 = 1
    let reader = || -> bool value == 1
    return reader()
}
